# langgraph_api_boilerplate

./: .env.example  .gitignore  LICENCE  Makefile  langgraph.json  pyproject.toml
api/: main.py
src/: state.py
src/agents/: __init__.py  actor_factory.py  dynamic_actor.py  dynamic_agent.py  planner.py  research.py
src/config/: configuration.py
src/llms/: fz.py  run.ipynb
src/monitoring/: __init__.py  langsmith_config.py
src/prompts/: __init__.py  actor_factory_prompt.md  actor_factory_prompt.zh_CN.md  coordinator.zh_CN.md  dynamic_actor_prompt.md  dynamic_actor_prompt.zh_CN.md  planner_prompt.md  planner_prompt.zh_CN.md  research_coordinator.md  research_prompt.md  template.py
src/tools/: __init__.py  get_file.py  read_url.py  search.py  write_file.py
src/utils/: __init__.py  date.py  mock.py  path.py  stream.py
tests/: conftest.py  test_read_url.py
web/: biome.json  package.json  pnpm-lock.yaml
